Added missing features and cleaned up code

--- a/DayCounterApp.Api/appsettings.json
+++ b/DayCounterApp.Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataSource": {
+    "Type": "Csv",
+    "ConnectionString": "holiday.txt"
+  }
 }
